# claude-code-voice-mcp-server

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  CLAUDE.md  CLAUDE.md.example  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml
config/systemd/: claude-voice-tts.service
config/tts-service/: config.json.default
src/: claude_voice_mcp.py
tests/: test_api.sh  test_installation.sh  test_mcp.sh
